changed param names around in Racer's Cup added pegasus/player selection to Welcome Center

--- a/packages/StewardClient/src/app/pages/tools/pages/unified-calendar/steelhead/components/racers-cup/racers-cup-calendar/racers-cup-calendar.component.html
+++ b/packages/StewardClient/src/app/pages/tools/pages/unified-calendar/steelhead/components/racers-cup/racers-cup-calendar/racers-cup-calendar.component.html
@@ -9,7 +9,9 @@
   <div class="steward-layout-with-sidebar">
     <div class="steward-layout-sidebar-group">
       <div class="calendar-control-panel">
-        <racers-cup-inputs (playerAndDaysForward)="refreshTable($event)"></racers-cup-inputs>
+        <calendar-lookup-inputs
+          (playerAndDaysForward)="refreshTable($event)"
+        ></calendar-lookup-inputs>
       </div>
     </div>
     <ng-container *waitForMonitor="getMonitor">
