--- a/packages/StewardClient/src/app/pages/tools/pages/ugc-details/pages/steelhead-lookup/steelhead-lookup.component.html
+++ b/packages/StewardClient/src/app/pages/tools/pages/ugc-details/pages/steelhead-lookup/steelhead-lookup.component.html
@@ -86,7 +86,7 @@
                 appearance="fill"
               >
                 <mat-label>Report reason</mat-label>
-                <mat-select matInput [(ngModel)]="selectedReason">
+                <mat-select matInput [(ngModel)]="selectedReason" [disabled]="!canReportUgc">
                   <mat-option *ngFor="let reason of reportReasons" [value]="reason.id">
                     {{ reason.description }}
                   </mat-option>
@@ -97,6 +97,7 @@
                   #verifyReportBtn
                   [permissionAttribute]="reportPermAttribute"
                   [permissionTitle]="gameTitle"
+                  [disabled]="!canReportUgc"
                 ></verify-button>
                 <button
                   class="sf-action-list-margins"
@@ -114,55 +115,62 @@
                   <span>Report</span>
                 </button>
               </div>
+              <mat-error *ngIf="!canReportUgc">Cannot report Replay UGC item</mat-error>
             </div>
-            <div *ngIf="!ugcItem?.isHidden" class="sf-horizontal do-not-manipulate-margin">
-              <verify-button
-                #verifyHideBtn
-                [permissionAttribute]="hidePermAttribute"
-                [permissionTitle]="gameTitle"
-                [disabled]="!ugcItem?.isPublic"
-              ></verify-button>
-              <button
-                class="sf-action-list-margins"
-                mat-raised-button
-                color="warn"
-                [verifyWithV2]="verifyHideBtn"
-                (click)="hideUgcItem()"
-                stateManager
-                [monitor]="hideMonitor"
-                monitorDisable
-                monitorWarn
-                monitorWarnSnackbar
-                monitorCompleteSnackbar
-              >
-                Hide UGC
-                <help-popover-icon cardTitle="Hide UGC"
-                  >Private UGC cannot be hidden.</help-popover-icon
+            <div *ngIf="!ugcItem?.isHidden">
+              <div class="sf-horizontal do-not-manipulate-margin">
+                <verify-button
+                  #verifyHideBtn
+                  [permissionAttribute]="hidePermAttribute"
+                  [permissionTitle]="gameTitle"
+                  [disabled]="!ugcItem?.isPublic || !canHideUgc"
+                ></verify-button>
+                <button
+                  class="sf-action-list-margins"
+                  mat-raised-button
+                  color="warn"
+                  [verifyWithV2]="verifyHideBtn"
+                  (click)="hideUgcItem()"
+                  stateManager
+                  [monitor]="hideMonitor"
+                  monitorDisable
+                  monitorWarn
+                  monitorWarnSnackbar
+                  monitorCompleteSnackbar
                 >
-              </button>
+                  Hide UGC
+                  <help-popover-icon cardTitle="Hide UGC"
+                    >Private UGC cannot be hidden.</help-popover-icon
+                  >
+                </button>
+              </div>
+              <mat-error *ngIf="!canHideUgc">Cannot hide Replay UGC item</mat-error>
             </div>
 
-            <div *ngIf="ugcItem.isHidden" class="sf-horizontal do-not-manipulate-margin">
-              <verify-button
-                #verifyUnhideBtn
-                [permissionAttribute]="unhidePermAttribute"
-                [permissionTitle]="gameTitle"
-              ></verify-button>
-              <button
-                class="sf-action-list-margins"
-                mat-raised-button
-                color="warn"
-                [verifyWithV2]="verifyUnhideBtn"
-                (click)="unhideUgcItem()"
-                stateManager
-                [monitor]="unhideMonitor"
-                monitorDisable
-                monitorWarn
-                monitorWarnSnackbar
-                monitorCompleteSnackbar
-              >
-                Unhide UGC
-              </button>
+            <div *ngIf="ugcItem.isHidden">
+              <div class="sf-horizontal do-not-manipulate-margin">
+                <verify-button
+                  #verifyUnhideBtn
+                  [permissionAttribute]="unhidePermAttribute"
+                  [permissionTitle]="gameTitle"
+                ></verify-button>
+                <button
+                  class="sf-action-list-margins"
+                  mat-raised-button
+                  color="warn"
+                  [verifyWithV2]="verifyUnhideBtn"
+                  (click)="unhideUgcItem()"
+                  stateManager
+                  [monitor]="unhideMonitor"
+                  monitorDisable
+                  monitorWarn
+                  monitorWarnSnackbar
+                  monitorCompleteSnackbar
+                >
+                  Unhide UGC
+                </button>
+              </div>
+              <mat-error *ngIf="!canHideUgc">Cannot unhide Replay UGC item</mat-error>
             </div>
           </div>
         </div>
