--- a/packages/StewardClient/src/app/pages/tools/pages/unified-calendar/steelhead/components/racers-cup/racers-cup-calendar/racers-cup-calendar.component.html
+++ b/packages/StewardClient/src/app/pages/tools/pages/unified-calendar/steelhead/components/racers-cup/racers-cup-calendar/racers-cup-calendar.component.html
@@ -11,6 +11,7 @@
       <div class="calendar-control-panel">
         <calendar-lookup-inputs
           (playerAndDaysForward)="refreshTable($event)"
+          [requireDaysForward]="true"
         ></calendar-lookup-inputs>
       </div>
     </div>
