--- a/packages/StewardClient/src/app/pages/tools/pages/unified-calendar/steelhead/components/rivals/components/rivals-calendar-view/steelhead-rivals-calendar-view.component.html
+++ b/packages/StewardClient/src/app/pages/tools/pages/unified-calendar/steelhead/components/rivals/components/rivals-calendar-view/steelhead-rivals-calendar-view.component.html
@@ -3,6 +3,7 @@
     <div class="calendar-control-panel">
       <calendar-lookup-inputs
         (playerAndDaysForward)="refreshTable($event)"
+        [requireDaysForward]="false"
       ></calendar-lookup-inputs>
     </div>
   </div>
