--- a/packages/StewardClient/src/app/pages/tools/pages/unified-calendar/steelhead/components/showroom/showroom-calendar-view/steelhead/steelhead-showroom-calendar-view.component.html
+++ b/packages/StewardClient/src/app/pages/tools/pages/unified-calendar/steelhead/components/showroom/showroom-calendar-view/steelhead/steelhead-showroom-calendar-view.component.html
@@ -7,6 +7,7 @@
       <div class="calendar-control-panel">
         <calendar-lookup-inputs
           (playerAndDaysForward)="refreshTable($event)"
+          [requireDaysForward]="false"
         ></calendar-lookup-inputs>
       </div>
     </div>
