--- a/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
+++ b/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
@@ -56,6 +56,21 @@
       >settings</mat-icon
     >
   </a>
+  <a
+    [routerLink]="[{ outlets: { sidebar: 'sidebars' } }]"
+    queryParamsHandling="preserve"
+    mat-icon-button
+    routerLinkActive="stroked-icon-button"
+    matTooltip="Sidebar"
+  >
+    <span class="tour-highlight-buffer" tourAnchor="home-tour.step.two"></span>
+    <mat-icon
+      [matBadge]="settingsNotificationCount > 0 ? settingsNotificationCount : null"
+      matBadgeSize="small"
+      color="accent"
+      >settings</mat-icon
+    >
+  </a>
 </span>
 
 <span>
