--- a/packages/StewardClient/src/app/sidebars/sidebars.component.html
+++ b/packages/StewardClient/src/app/sidebars/sidebars.component.html
@@ -1,3 +1,8 @@
-<mat-sidenav-container>
-  <p>sidebars works!</p>
-</mat-sidenav-container>
+<mat-drawer-container>
+  <mat-drawer mode="side" opened>
+    <mat-nav-list></mat-nav-list>
+  </mat-drawer>
+  <mat-drawer-content>
+    <p>sidebars works 2!</p>
+  </mat-drawer-content>
+</mat-drawer-container>
