--- a/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
+++ b/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
@@ -57,7 +57,7 @@
     >
   </a>
   <a
-    [routerLink]="[{ outlets: { sidebar: 'sidebars' } }]"
+    [routerLink]="[{ outlets: { sidebar: 'unified' } }]"
     queryParamsHandling="preserve"
     mat-icon-button
     routerLinkActive="stroked-icon-button"
