--- a/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
+++ b/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
@@ -43,7 +43,7 @@
 <span class="short-spacer"></span>
 <span class="tour-element-highlighted">
   <a
-    [routerLink]="[{ outlets: { sidebar: 'settings' } }]"
+    [routerLink]="[{ outlets: { sidebar: 'unified/settings' } }]"
     queryParamsHandling="preserve"
     mat-icon-button
     routerLinkActive="stroked-icon-button"
