--- a/packages/StewardClient/src/app/sidebars/sidebars.component.html
+++ b/packages/StewardClient/src/app/sidebars/sidebars.component.html
@@ -14,21 +14,16 @@
         <a matListItemTitle>Doot</a>
       </mat-list-item>
 
-      <mat-list-item>
-        <button mat-icon-button matListItemMeta>
-          <mat-icon
-            [matBadge]="settingsNotificationCount > 0 ? settingsNotificationCount : null"
-            matBadgeSize="small"
-            >settings</mat-icon>
-        </button>
-        <a
-          matListItemTitle
-          [routerLink]="['settings']"
-          queryParamsHandling="preserve"
-          mat-icon-button
-          routerLinkActive="stroked-icon-button"
-          matTooltip="Settings">Settings</a>
-    </mat-list-item>
+      <a mat-list-item
+        [routerLink]="['settings']"
+        queryParamsHandling="preserve"
+        routerLinkActive="list-item-active"
+        matTooltip="Settings">
+        <mat-icon
+          [matBadge]="settingsNotificationCount > 0 ? settingsNotificationCount : null"
+          matBadgeSize="small">settings</mat-icon>
+        Settings
+      </a>
 
     </mat-nav-list>
   </mat-drawer>
