--- a/packages/StewardClient/src/app/sidebars/sidebars.component.scss
+++ b/packages/StewardClient/src/app/sidebars/sidebars.component.scss
@@ -1,3 +1,5 @@
+@import '/src/styles/mixins';
+
 mat-drawer-container {
   height: 100%;
 }
@@ -12,6 +14,11 @@ mat-drawer {
   height: 100%;
 }
 
-:host ::ng-deep .mat-list-item-content.mat-list-item-content.mat-list-item-content {
-  padding-left: .5em;
+.list-item-active {
+  background-color: $sidebar-navigation-background;
+  color: $sidebar-navigation-text;
+}
+
+a[mat-list-item] mat-icon {
+  padding-right: .25em;
 }
