--- a/packages/StewardClient/src/styles/mixins/variables/colors.scss
+++ b/packages/StewardClient/src/styles/mixins/variables/colors.scss
@@ -2,6 +2,9 @@
 @use '@angular/material' as mat;
 @import './theme/';
 
+$sidebar-navigation-background: app-color-darker($app-background, 0.5);
+$sidebar-navigation-text: app-color-darker-contrast($app-background, 0.5);
+
 $table-tr-highlight: app-color-darker($app-background, 0.25);
 $table-tr-hover: app-color-darker($app-background, 0.5);
 $table-tr-active: app-color-darker($app-background, 0.75);
