Unify on account button

--- a/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
+++ b/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
@@ -60,7 +60,7 @@
 
 <span>
   <a
-    [routerLink]="[{ outlets: { sidebar: 'unified/profile' } }]"
+    [routerLink]="[{ outlets: { sidebar: 'unified' } }]"
     queryParamsHandling="preserve"
     mat-icon-button
     routerLinkActive="stroked-icon-button"
