--- a/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
+++ b/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
@@ -66,6 +66,6 @@
     routerLinkActive="stroked-icon-button"
     matTooltip="Profile"
   >
-    <mat-icon>account_circle</mat-icon>
+    <mat-icon>manage_accounts</mat-icon>
   </a>
 </span>
