--- a/packages/StewardClient/src/app/pages/tools/components/navbar/navbar.component.scss
+++ b/packages/StewardClient/src/app/pages/tools/components/navbar/navbar.component.scss
@@ -24,12 +24,11 @@
   }
 }
 
-.edit-button {
-  margin-right: 0.5em;
-}
-
 .edit-mode-instructions {
   vertical-align: middle;
+  height: 36px;
+  line-height: 36px;
+  margin-left: .5em;
 }
 
 .drop-list-wrapper,
