--- a/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.scss
+++ b/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.scss
@@ -5,6 +5,14 @@
   min-width: 2em;
 }
 
+.horizontal-nav-separator {
+  flex: 0 1 2px;
+  min-width: 2px;
+  background-color: app-color-default-contrast($app-primary, 0.2);
+  margin: 0 .25em;
+  border-radius: 1em;
+}
+
 .mat-menu-trigger {
   padding: 0;
   min-width: $gap-medium + $gap-medium;
