add warning icon to Steelhead user flags when provided conflicting information from Services

--- a/packages/StewardClient/src/app/shared/views/user-flags/user-flags.component.html
+++ b/packages/StewardClient/src/app/shared/views/user-flags/user-flags.component.html
@@ -62,6 +62,12 @@
             <ng-container *ngIf="!alteredLabels[control.key]">
               {{ control.key | humanize }}
             </ng-container>
+            <mat-icon
+              *ngIf="this.currentFlags[control.key].hasConflict"
+              [matTooltip]="tooltipText"
+              color="warn"
+              >warning</mat-icon
+            >
           </mat-checkbox>
         </section>
       </ng-container>
