--- a/packages/StewardClient/src/app/shared/modules/endpoints/endpoints-nav-tool/endpoints-nav-tool.component.html
+++ b/packages/StewardClient/src/app/shared/modules/endpoints/endpoints-nav-tool/endpoints-nav-tool.component.html
@@ -80,7 +80,7 @@
     >{{ optionSet.name }}
   </a>
   <a
-    [routerLink]="[{ outlets: { sidebar: 'settings' } }]"
+    [routerLink]="[{ outlets: { sidebar: 'settings/endpoints' } }]"
     queryParamsHandling="preserve"
     mat-menu-item
     routerLinkActive="stroked-icon-button"
