Rework tours config

--- a/packages/StewardClient/src/app/sidebars/settings/endpoints/endpoints.component.scss
+++ b/packages/StewardClient/src/app/sidebars/settings/endpoints/endpoints.component.scss
@@ -4,6 +4,11 @@
 :host {
   display: block;
   padding: 1rem 2rem;
+  min-width: 30vw;
+}
+
+:host ::ng-deep mat-card {
+  margin-bottom: $gap-medium;
 }
 
 
