Add Changelog and Notifications to sidebar

--- a/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
+++ b/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
@@ -1,7 +1,7 @@
 <span class="horizontal-nav-separator"></span>
 <span>
   <a
-    [routerLink]="[{ outlets: { sidebar: 'notifications' } }]"
+    [routerLink]="[{ outlets: { sidebar: 'unified/notifications' } }]"
     queryParamsHandling="preserve"
     mat-icon-button
     routerLinkActive="stroked-icon-button"
@@ -18,7 +18,7 @@
 </span>
 <span class="tour-element-highlighted">
   <a
-    [routerLink]="[{ outlets: { sidebar: 'changelog' } }]"
+    [routerLink]="[{ outlets: { sidebar: 'unified/changelog' } }]"
     queryParamsHandling="preserve"
     mat-icon-button
     routerLinkActive="stroked-icon-button"
