--- a/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
+++ b/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
@@ -58,14 +58,13 @@
     <mat-icon>contact_support</mat-icon>
   </a>
 </span>
-<span class="horizontal-nav-separator"></span>
 
 <span class="tour-element-highlighted">
   <a
     [routerLink]="[{ outlets: { sidebar: 'unified' } }]"
     queryParamsHandling="preserve"
     mat-icon-button
-    routerLinkActive="stroked-icon-button"
+    routerLinkActive="sidebar-active-icon"
     matTooltip="Profile"
   >
     <span class="tour-highlight-buffer" tourAnchor="home-tour.step.two"></span>
