--- a/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
+++ b/packages/StewardClient/src/app/shared/views/sidebar-icons/sidebar-icons.component.html
@@ -69,5 +69,18 @@
   >
     <span class="tour-highlight-buffer" tourAnchor="home-tour.step.two"></span>
     <mat-icon>manage_accounts</mat-icon>
+    <span [matBadge]="changelogNotificationCount > 0 ? changelogNotificationCount : null"
+      matBadgeColor="accent"
+      matBadgeSize="small"></span>
+      <span 
+        [matBadge]="notificationCount"
+        [matBadgeColor]="notificationColor"
+        matBadgeSize="small"
+        matBadgePosition="above after"></span>
+      <span  
+        [matBadge]="notificationCount"
+        [matBadgeColor]="notificationColor"
+        matBadgeSize="small"
+        matBadgePosition="below after"></span>
   </a>
 </span>
