Add notifications to profile badge

--- a/packages/StewardClient/src/app/sidebars/sidebars.component.html
+++ b/packages/StewardClient/src/app/sidebars/sidebars.component.html
@@ -37,7 +37,7 @@
         [routerLink]="['changelog']"
         queryParamsHandling="preserve"
         routerLinkActive="list-item-active"
-        matTooltip="Changelog"
+        matTooltip="A list of recent updates"
         matTooltipPosition="left">
         <mat-icon
           [matBadge]="changelogNotificationCount > 0 ? changelogNotificationCount : null"
